kubernetes/grafana/endpointslice.yml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ai-node1-exporter
  namespace: observability
  labels:
    kubernetes.io/service-name: ai-node1-exporter
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9100
endpoints:
  - addresses:
      - "192.168.0.80"
