kubernetes/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-node1-exporter
  namespace: observability
  labels:
    app: ai-node1-exporter
spec:
  type: ExternalName
  externalName: ai-node1.danwils.lcl
  clusterIP: ""
  # Maybe not relevant
  ports:
  - name: metrics
    port: 9100
    protocol: TCP
    targetPort: 9100
