kubernetes/grafana/service_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: observability
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: observability
spec:
  rules:
  - host: grafana.danwils.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
  ingressClassName: nginx
---
